 2015-08-21 15:23  alexpeshkoff 
   M src/common/Tokens.cpp
   M src/common/Tokens.h
Fixed CORE-4890: Placing comment (single-lined or multi-lined) between final `END` of creating SP code and terminal character (^) produces compiling error when tool uses old API

 2015-08-20 11:23  dimitr 
   M src/jrd/lck.cpp
Fixed the hash function (broken since the very beginning).

 2015-08-19 12:37  mapopa 
   M README.md
Use future date for sourceforge stats (forces current date)

 2015-08-19 02:06  asfernandes 
   M src/common/unicode_util.cpp
   M src/common/unicode_util.h
Fixed (again) CORE-3545 - Inconsistent domain's constraint validation in PSQL. Related to CORE-3947.

 2015-08-18 15:04  alexpeshkoff 
   M lang_helpers/gds_codes.ftn
   M lang_helpers/gds_codes.pas
   M src/include/gen/codetext.h
   M src/include/gen/iberror.h
   M src/include/gen/msgs.h
   M src/include/gen/sql_code.h
   M src/include/gen/sql_state.h
   M src/jrd/Mapping.cpp
   M src/jrd/Mapping.h
   M src/jrd/jrd.cpp
   M src/jrd/scl.h
   M src/jrd/shut.cpp
   M src/msgs/facilities2.sql
   M src/msgs/messages2.sql
   M src/msgs/system_errors2.sql
Fixed CORE-4899: GFIX -online: message "IProvider::attachDatabase failed when loading mapping cache" appears in Classic (only) if access uses remote protocol

 2015-08-18 14:57  alexpeshkoff 
   M src/yvalve/why.cpp
Fixed CORE-4911: Providers enumeration should not be continued on most of errors taking place in the provider

 2015-08-18 10:00  dimitr 
   M src/jrd/vio.cpp
Totally misc.

 2015-08-16 15:47  dimitr 
   M src/jrd/recsrc/HashJoin.cpp
Fixed the hash-join part of CORE-4909: MERGE / HASH JOINs produce incorrect results when VARCHAR join keys differ only by trailing spaces.

 2015-08-16 13:53  asfernandes 
   M src/jrd/btr.cpp
   M src/jrd/validation.cpp
   M src/utilities/ntrace/TracePluginImpl.cpp
   M src/utilities/ntrace/TracePluginImpl.h
Misc.

 2015-08-14 14:41  alexpeshkoff 
   M src/jrd/svc.cpp