@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:32008
+  FORMAL BUILD NUMBER:32009
 */
 
-#define PRODUCT_VER_STRING "3.0.0.32008"
-#define FILE_VER_STRING "WI-V3.0.0.32008"
-#define LICENSE_VER_STRING "WI-V3.0.0.32008"
-#define FILE_VER_NUMBER 3, 0, 0, 32008
+#define PRODUCT_VER_STRING "3.0.0.32009"
+#define FILE_VER_STRING "WI-V3.0.0.32009"
+#define LICENSE_VER_STRING "WI-V3.0.0.32009"
+#define FILE_VER_NUMBER 3, 0, 0, 32009
 #define FB_MAJOR_VER "3"
 #define FB_MINOR_VER "0"
 #define FB_REV_NO "0"
-#define FB_BUILD_NO "32008"
+#define FB_BUILD_NO "32009"
 #define FB_BUILD_TYPE "V"
 #define FB_BUILD_SUFFIX "Firebird 3.0 Release Candidate 1"
